--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
 		"watch": "cross-env NODE_ENV=development nodemon --quiet --no-stdin --watch src --ext ts --exec 'node --inspect --require node-env-dev --require ts-node/register/transpile-only' src/main.ts"
 	},
 	"dependencies": {
+		"@completely/cli": "0.0.10",
+		"@completely/zsh-generator": "0.0.4",
 		"@eyalsh/docopt": "^1.0.1",
 		"cli-belt": "^1.0.3",
 		"cli-kit": "^1.8.2",
 		"get-stdin": "^8.0.0",
 		"help-parser": "^1.3.1",
+		"mri": "^1.1.6",
+		"optionator": "^0.9.1",
 		"parse-help": "^1.0.0",
+		"rambda": "^6.1.0",
+		"rambdax": "^6.1.0",
+		"string-fn": "^2.12.2",
+		"strip-ansi": "^6.0.0",
 		"yargs-parser": "^20.2.0"
 	},
 	"devDependencies": {
+		"@types/mri": "^1.1.0",
 		"@types/node": "^14.11.1",
 		"cross-env": "^7.0.2",
-		"node-env-dev": "^1.8.43",
+		"node-env-dev": "^1.9.0",
 		"nodemon": "^2.0.4",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3"
